--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/dat.gui": "^0.7.6",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.62",
     "@types/pixi.js": "^5.0.0",
@@ -15,7 +16,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
