--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   "homepage": "https://theloni-monk.github.io/physics-portfolio/",
   "dependencies": {
     "@craco/craco": "^6.1.1",
+    "@primer/components": "^24.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "@types/dat.gui": "^0.7.6",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.62",
     "@types/pixi.js": "^5.0.0",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
+    "react": "^17.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "styled-components": "^5.2.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.0.3",
     "autoprefixer": "^9.8.6",
+    "chokidar": "^3.5.1",
     "gh-pages": "^3.1.0",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3"
